tests/machine/x/java/dataset_where_filter.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsdataset_where_filter3600109312/001/Main.java:26: error: incompatible types: boolean cannot be converted to int
		_res1.add(new DataClass2(person.name, person.age, person.age >= 60));
		                                                             ^
/tmp/TestCompileValidProgramsdataset_where_filter3600109312/001/Main.java:33: error: incompatible types: int cannot be converted to boolean
		System.out.println(person.name + " " + "is" + " " + person.age + " " + (person.is_senior ? " (senior)" : ""));
		                                                                              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| let people = [
  2|   { name: "Alice", age: 30 },